--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,16 +2,6 @@
   padding: 0 2rem;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .footer {
   display: flex;
   flex: 1;
@@ -104,8 +94,10 @@
 }
 
 .logo {
-  height: 1em;
   margin-left: 0.5rem;
+  align-self: center;
+  font-weight: bolder;
+  font-size: large;
 }
 
 @media (max-width: 600px) {
